--- a/prosjekt5/LaTex/project5.tex
+++ b/prosjekt5/LaTex/project5.tex
@@ -285,15 +285,15 @@ Stuff
 
 \subsection{Vital dynamics}
 
-\begin{figure}[!htb]
-	\centering 
-	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
-	\includegraphics[scale=0.56]{../plots/opp_c_A0.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_c_A1.pdf}
-	\caption{Plots of population $A$ when accounting for vital dynamics. On the left $d_i=0$ and on the rigth $d_i=0.1$.}
-	%Label gjør det enkelt å referere til ulike bilder.
-	\label{opp_c0A}
-\end{figure}
+%\begin{figure}[!htb]
+%	\centering 
+%	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
+%	\includegraphics[scale=0.56]{../plots/opp_c_A0.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_c_A1.pdf}
+%	\caption{Plots of population $A$ when accounting for vital dynamics. On the left $d_i=0$ and on the rigth $d_i=0.1$.}
+%	%Label gjør det enkelt å referere til ulike bilder.
+%	\label{opp_c0A}
+%\end{figure}
 \begin{figure}[!htb]
 	\includegraphics[scale=0.56]{../plots/opp_c_B0.pdf}
 	\includegraphics[scale=0.56]{../plots/opp_c_B1.pdf}
@@ -301,20 +301,20 @@ Stuff
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_c0B}
 \end{figure}	
-\begin{figure}[!htb]
-	\includegraphics[scale=0.56]{../plots/opp_c_C0.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_c_C1.pdf}
-	\caption{Plots of population $C$ when accounting for vital dynamics. On the left $d_i=0$ and on the rigth $d_i=0.1$.}
-	%Label gjør det enkelt å referere til ulike bilder.
-	\label{opp_c0C}
-\end{figure}
-\begin{figure}[!htb]
-	\includegraphics[scale=0.56]{../plots/opp_c_D0.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_c_D1.pdf}	
-	\caption{Plots of population $D$ when accounting for vital dynamics. On the left $d_i=0$ and on the rigth $d_i=0.1$.}
-	%Label gjør det enkelt å referere til ulike bilder.
-	\label{opp_c0D}
-\end{figure}
+%\begin{figure}[!htb]
+%	\includegraphics[scale=0.56]{../plots/opp_c_C0.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_c_C1.pdf}
+%	\caption{Plots of population $C$ when accounting for vital dynamics. On the left $d_i=0$ and on the rigth $d_i=0.1$.}
+%	%Label gjør det enkelt å referere til ulike bilder.
+%	\label{opp_c0C}
+%\end{figure}
+%\begin{figure}[!htb]
+%	\includegraphics[scale=0.56]{../plots/opp_c_D0.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_c_D1.pdf}	
+%	\caption{Plots of population $D$ when accounting for vital dynamics. On the left $d_i=0$ and on the rigth $d_i=0.1$.}
+%	%Label gjør det enkelt å referere til ulike bilder.
+%	\label{opp_c0D}
+%\end{figure}
 
 \begin{figure}[!htb]
 	\centering 
@@ -335,10 +335,14 @@ Stuff
 \begin{figure}[!htb]
 	\centering 
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
-	\includegraphics[scale=0.56]{../plots/opp_c_h_10000.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_c_h_20000.pdf}	
+%	\includegraphics[scale=0.56]{../plots/opp_c_h_10000.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_c_h_20000.pdf}	
 	\includegraphics[scale=0.56]{../plots/opp_c_h_100000.pdf} %denne?
-	\caption{Plots of popualtion $B$  when accounting for vital dynamics with $d_i=0.1$, and $d$ and $e$ is increased by a factor of 1000, 2000 and 10000 respectively.}
+	\caption{Plots of popualtion $B$  when accounting for vital dynamics with $d_i=0.1$, and $d$ and $e$ is increased by a factor of 
+%	1000, 2000 and 
+	10000 
+	%respectively
+	.}
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_c2}
 \end{figure}
@@ -350,18 +354,19 @@ Stuff
 	\centering 
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
 	\includegraphics[scale=0.56]{../plots/opp_d_A.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_d_B.pdf}
-	\caption{Plots of population $A$ in the left and $D$ on the rigth when $a$ varies with time. $A=1$ and $a0=4$.}
+%	\includegraphics[scale=0.56]{../plots/opp_d_B.pdf}
+	\includegraphics[scale=0.56]{../plots/opp_d_C.pdf}
+	\caption{Plots of populations when $a$ varies with time. Population $A$ on the left with $A=1$ and $a0=4$, and $B$ on the rigth with $A=2$ and $a0=4$.}
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_d0}
 \end{figure}
-\begin{figure}[!htb]
-	\includegraphics[scale=0.56]{../plots/opp_d_C.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_d_D.pdf}
-	\caption{Plots of population $B$ when $a$ varies with time. $A=2$, while $a0=4$ on the left and $a0=6$ on the rigth.}
-	%Label gjør det enkelt å referere til ulike bilder.
-	\label{opp_d1}
-\end{figure}
+%\begin{figure}[!htb]
+%	\includegraphics[scale=0.56]{../plots/opp_d_C.pdf}
+%%	\includegraphics[scale=0.56]{../plots/opp_d_D.pdf}
+%	\caption{Plots of population $B$ when $a$ varies with time. $A=2$, while $a0=4$ on the left and $a0=6$ on the rigth.}
+%	%Label gjør det enkelt å referere til ulike bilder.
+%	\label{opp_d1}
+%\end{figure}
 
 
 \subsection{Vaccination}
@@ -369,11 +374,11 @@ Stuff
 \begin{figure}[!htb]
 	\centering 
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
-	\includegraphics[scale=0.56]{../plots/opp_e_A0.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_e_A0.pdf}
 	\includegraphics[scale=0.56]{../plots/opp_e_B0.pdf}	
-	\includegraphics[scale=0.56]{../plots/opp_e_C0.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_e_D0.pdf}
-	\caption{Plots of population $A$ to $D$ with constant vaccination $f=1$.}
+%	\includegraphics[scale=0.56]{../plots/opp_e_C0.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_e_D0.pdf}
+	\caption{Plots of population $B$ with constant vaccination $f=1$.}
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_e0}
 \end{figure}
@@ -382,15 +387,15 @@ Stuff
 	\centering 
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
 %	\includegraphics[scale=0.56]{../plots/opp_e_A1.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_e_A2.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_e_A2.pdf}
 %	\includegraphics[scale=0.56]{../plots/opp_e_A3.pdf}
 %	\includegraphics[scale=0.56]{../plots/opp_e_B1.pdf}	
 	\includegraphics[scale=0.56]{../plots/opp_e_B2.pdf}	
 %	\includegraphics[scale=0.56]{../plots/opp_e_C1.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_e_C2.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_e_C2.pdf}
 %	\includegraphics[scale=0.56]{../plots/opp_e_D1.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_e_D2.pdf}
-	\caption{Plots of population $A$ to $D$ with linear vaccination $f=0.1 t$.}
+%	\includegraphics[scale=0.56]{../plots/opp_e_D2.pdf}
+	\caption{Plots of population $B$ with linear vaccination $f=0.1 t$.}
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_e1}
 \end{figure}
@@ -398,11 +403,11 @@ Stuff
 \begin{figure}[!htb]
 	\centering 
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
-	\includegraphics[scale=0.56]{../plots/opp_e_fa.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_e_fa.pdf}
 	\includegraphics[scale=0.56]{../plots/opp_e_fb.pdf}	
-	\includegraphics[scale=0.56]{../plots/opp_e_fc.pdf}
-	\includegraphics[scale=0.56]{../plots/opp_e_fd.pdf}
-	\caption{Plots of population $A$ to $D$ with a vaccination campaign from day 2 to 9, where $f=0.3$, while it's 0 the rest of the time.}
+%	\includegraphics[scale=0.56]{../plots/opp_e_fc.pdf}
+%	\includegraphics[scale=0.56]{../plots/opp_e_fd.pdf}
+	\caption{Plots of population $B$ with a vaccination campaign from day 2 to 9, where $f=0.3$, while it's 0 the rest of the time.}
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_e2}
 \end{figure}
